<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/color_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ann_group_logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:background="@drawable/shape_login_bg">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:typeface="sans"
                android:textStyle="bold"
                android:textSize="@dimen/login_title_size"
                android:textColor="@color/color_primary"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/login_title_margin_top"
                android:layout_marginBottom="@dimen/login_title_margin_bottom"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:layout_marginStart="40dp"
                            android:textColor="@color/color_primary"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:typeface="sans"/>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/app_inputfield_style"
                            android:drawablePadding="@dimen/login_field_drawable_padding"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:drawableStart="@drawable/ic_baseline_mail_outline_24" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:layout_marginStart="40dp"
                            android:textColor="@color/color_primary"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:typeface="sans"/>

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/app_inputfield_style"
                            android:hint="@string/hint_password"
                            android:drawablePadding="@dimen/login_field_drawable_padding"
                            android:inputType="textPassword"
                            android:drawableStart="@drawable/ic_lock"
                            android:paddingEnd="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:layout_marginBottom="28dp"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:text="@string/label_login"
                            style="@style/login_button_style"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="@dimen/btn_left_right_margin"
                            android:layout_marginEnd="@dimen/btn_left_right_margin"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>