<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_border_rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/color_primary"
                android:gravity="left|center_vertical"
                android:paddingStart="25dp">

                <ImageView
                    android:id="@+id/iv_alert_icon"
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_warning_24"
                    app:tint="@color/color_secondary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/color_secondary"
                    android:text="@string/dialog_title_alert"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/color_primary"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:gravity="center"
                    android:text="ALert"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_no"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textColor="#000"
                        android:text="@string/btn_label_no"
                        android:layout_margin="20dp"
                        android:background="@drawable/shape_border_only_button_selector"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:textColor="#000"
                        android:text="@string/btn_label_yes"
                        android:layout_margin="20dp"
                        android:background="@drawable/shape_border_only_button_selector"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>